--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,6 @@ body {
   -webkit-background-size: cover;
 }
 
-
 /* ----------------------------------------Navbar */
 
 /* I had to use the !important tag on some of the css in the navigation bar to override the some of 
@@ -82,7 +81,7 @@ li a:hover {
 
 .about-container {
   border: 1px solid black;
-  background-color: #f93822ff;
+  background-color: #3ECBFF;
   padding: 5px;
   text-align: center;
 }
@@ -95,12 +94,12 @@ li a:hover {
 
 .breweries-near-container {
   border: 1px solid black;
-  background-color: #ff3300;
+  background-color: #FF6A4C;
   padding: 5px;
   margin-bottom: 15px;
+  padding-bottom: 50px;
   text-align: center;
 }
-
 
 .brewery-card-container {
   padding-bottom: 30px;
@@ -162,18 +161,12 @@ a {
   text-align: center;
   position: relative;
   float: left;
+  margin-right: 10px;
 }
 
 /* ----------------------------------------Cards */
 
-.cities-container {
-  padding-bottom: 50px;
-}
 
-.breweries-near-container {
-  padding-bottom: 50px;
-  text-align: center;
-}
 
 .card-text {
   text-align: center;
@@ -251,7 +244,15 @@ p.card-text a:hover {
   background-color: #fed715;
 }
 
+.manchester-container {
+    padding-right: 20px;
+    margin-right: 20px;
+}
+
 /* ----------------------------------------Cities/Map pages */
+.cities-container {
+  padding-bottom: 50px;
+}
 
 .city-map-heading {
   text-align: center;
@@ -291,16 +292,18 @@ p.card-text a:hover {
   margin-top: 10px;
   padding: 10px;
   overflow: scroll;
-  height: 250px;
+  height: 380px;
   float: right;
   width: 250px;
   border: 2px solid black;
-}
+  
+} 
 
 #start {
   background-color: #48a4d6;
   color: white;
   border: 1px solid black;
+  
 }
 
 #end {
@@ -463,11 +466,12 @@ a .newsletter {
   #directions-panel {
     width: 100% !important;
     margin-bottom: 5rem !important;
+    height: 200px;
   }
 
   #right-panel select,
   #right-panel input {
-    font-size: 10px;
+    font-size: 20px;
   }
 
   #right-panel {
@@ -516,7 +520,7 @@ a .newsletter {
   }
 }
 
-@media screen and (min-width: 767px) and (max-width: 1023px) {
+@media screen and (min-width: 767px) and (max-width: 1025px) {
   #People-drinking {
     display: none;
   }
@@ -528,20 +532,22 @@ a .newsletter {
   #directions-panel {
     width: 100% !important;
     margin-bottom: 5rem !important;
+    height: 300px;
   }
 
   #right-panel select,
   #right-panel input {
-    font-size: 10px;
+    font-size: 25px;
   }
 
   #right-panel {
     width: 100% !important;
     padding-right: 3rem;
+   
   }
 
   #map {
-    height: 340px;
+    height: 440px;
     border: 1px solid red;
     padding: 10px;
     width: 100% !important;
@@ -550,3 +556,6 @@ a .newsletter {
     float: left;
   }
 }
+
+
+ 
