--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,8 +96,8 @@ li a:hover {
   border: 1px solid black;
   background-color: #FF6A4C;
   padding: 5px;
-  margin-bottom: 15px;
-  padding-bottom: 50px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -228,6 +228,7 @@ p.card-text a:hover {
 
 .breweries-near-heading {
   text-align: center;
+  padding-top: 10px;
 }
 
 .about-heading {
@@ -384,6 +385,11 @@ a .newsletter {
 
 .newsletter:hover {
   transform: scale(1);
+}
+
+.about-container, p {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* ----------------------------------------Footer */
